2012-11-25  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * libgputils/gpprocessor.c.
    libgputils/gpprocessor.h:
    New members in the struct proc_class: page_size, bank_size
    New member in the struct px: prog_mem_size

2012-11-30  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/testsuite/gpasm.mchip/asmfiles/while1.asm,
    gpasm/testsuite/gpasm.mchip/asmfiles/while2.asm,
    gpasm/testsuite/gpasm.mchip/listfiles/while1.lst,
    gpasm/testsuite/gpasm.mchip/listfiles/while2.lst,
    gpasm/testsuite/gpasm.mchip/listfiles/while3.lst,
    gpasm/testsuite/gpasm.mchip/hexfiles/while1.hex,
    gpasm/testsuite/gpasm.mchip/hexfiles/while2.hex:
    fixed MPASM(X) "Warning[207]: Found label after column 1." which
    generates an error on gpasm
  * gpasm/gpasm.h.in, gpasm/preprocess.c, gpasm/parse.y,
    gpasm/gpasm.c, gpasm/util.c, gpasm/directive.c:
    implemented nested WHILE loops
  * gpasm/parse.y, gpasm/macro.c, gpasm/macro.h, gpasm/directive.c,
    gpasm/gpasm.h.in, gpasm/preprocess.c, gpasm/scan.l:
    WHILE listing compatible with MPASM(X)

2012-11-30  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/lst.c: data sections listing fixes, ibank listing fix
  * gpasm/directive.c: global directive listing fix
  * gpasm/preprocess.c:
    fixed nested define with parameters substitution,
    fixed substitution of mltiple define with parameters in the same line
  * libgputils/gpprocessor.h:
    added gp_processor_check_ibank() declaration

2012-11-26  Borut Razem  <borutr@users.sourceforge.net>
  * gputils/libgputils/gpprocessor.c, gputils/libgputils/gpprocessor.h,
    gputils/libgputils/gpcofflink.c, gputils/gpasm/directive.c:
    implemented feature request #62 - "BANKISEL with enhaced PIC series"
  * gputils/gpasm/testsuite/gpasm.project/listfiles/bankisel5.lst,
    gputils/gpasm/testsuite/gpasm.project/asmfiles/bankisel5.asm,
    gputils/gpasm/testsuite/gpasm.project/hexfiles/bankisel5.hex: