@@ -262,8 +262,8 @@ static struct px pics[] = {
   { PROC_CLASS_PIC14E   , "__16F1782"     , { "pic16f1782"     , "p16f1782"       , "16f1782"         }, 0x1782,  1,   32, 0x00F0FF, 0x000800, { 0x000800, 0x00EFFF }, { 0x008007, 0x008008 }, "16f1782_g.lkr"      },
   { PROC_CLASS_PIC14E   , "__16F1783"     , { "pic16f1783"     , "p16f1783"       , "16f1783"         }, 0x1783,  2,   32, 0x00F0FF, 0x001000, { 0x001000, 0x00EFFF }, { 0x008007, 0x008008 }, "16f1783_g.lkr"      },
   { PROC_CLASS_PIC14E   , "__16F1784"     , { "pic16f1784"     , "p16f1784"       , "16f1784"         }, 0x1784,  2,   32, 0x00F0FF, 0x001000, { 0x001000, 0x00EFFF }, { 0x008007, 0x008008 }, "16f1784_g.lkr"      },
-  { PROC_CLASS_PIC14E   , "__16F1786"     , { "pic16f1786"     , "p16f1786"       , "16f1786"         }, 0x1786,  1,   32, 0x00F0FF, 0x002000, { 0x000800, 0x00EFFF }, { 0x008007, 0x008008 }, "16f1786_g.lkr"      },
-  { PROC_CLASS_PIC14E   , "__16F1787"     , { "pic16f1787"     , "p16f1787"       , "16f1787"         }, 0x1787,  2,   32, 0x00F0FF, 0x002000, { 0x001000, 0x00EFFF }, { 0x008007, 0x008008 }, "16f1787_g.lkr"      },
+  { PROC_CLASS_PIC14E   , "__16F1786"     , { "pic16f1786"     , "p16f1786"       , "16f1786"         }, 0x1786,  1,   32, 0x00F0FF, 0x000800, { 0x000800, 0x00EFFF }, { 0x008007, 0x008008 }, "16f1786_g.lkr"      },
+  { PROC_CLASS_PIC14E   , "__16F1787"     , { "pic16f1787"     , "p16f1787"       , "16f1787"         }, 0x1787,  2,   32, 0x00F0FF, 0x001000, { 0x001000, 0x00EFFF }, { 0x008007, 0x008008 }, "16f1787_g.lkr"      },
   { PROC_CLASS_PIC14E   , "__16F1788"     , { "pic16f1788"     , "p16f1788"       , "16f1788"         }, 0x1788,  8,   32, 0x00F0FF, 0x004000, { 0x004000, 0x00EFFF }, { 0x008007, 0x008008 }, "16f1788_g.lkr"      },
   { PROC_CLASS_PIC14E   , "__16F1789"     , { "pic16f1789"     , "p16f1789"       , "16f1789"         }, 0x1789,  8,   32, 0x00F0FF, 0x004000, { 0x004000, 0x00EFFF }, { 0x008007, 0x008008 }, "16f1789_g.lkr"      },
   { PROC_CLASS_PIC14E   , "__16F1823"     , { "pic16f1823"     , "p16f1823"       , "16f1823"         }, 0x1823,  1,   32, 0x00F0FF, 0x000800, { 0x000800, 0x00EFFF }, { 0x008007, 0x008008 }, "16f1823_g.lkr"      },
@@ -320,8 +320,8 @@ static struct px pics[] = {
   { PROC_CLASS_PIC14E   , "__16LF1782"    , { "pic16lf1782"    , "p16lf1782"      , "16lf1782"        }, 0xA782,  1,   32, 0x00F0FF, 0x000800, { 0x000800, 0x00EFFF }, { 0x008007, 0x008008 }, "16lf1782_g.lkr"     },
   { PROC_CLASS_PIC14E   , "__16LF1783"    , { "pic16lf1783"    , "p16lf1783"      , "16lf1783"        }, 0xA783,  2,   32, 0x00F0FF, 0x001000, { 0x001000, 0x00EFFF }, { 0x008007, 0x008008 }, "16lf1783_g.lkr"     },
   { PROC_CLASS_PIC14E   , "__16LF1784"    , { "pic16lf1784"    , "p16lf1784"      , "16lf1784"        }, 0xA784,  2,   32, 0x00F0FF, 0x001000, { 0x001000, 0x00EFFF }, { 0x008007, 0x008008 }, "16lf1784_g.lkr"     },
-  { PROC_CLASS_PIC14E   , "__16LF1786"    , { "pic16lf1786"    , "p16lf1786"      , "16lf1786"        }, 0xA786,  1,   32, 0x00F0FF, 0x002000, { 0x000800, 0x00EFFF }, { 0x008007, 0x008008 }, "16lf1786_g.lkr"     },
-  { PROC_CLASS_PIC14E   , "__16LF1787"    , { "pic16lf1787"    , "p16lf1787"      , "16lf1787"        }, 0xA787,  2,   32, 0x00F0FF, 0x002000, { 0x001000, 0x00EFFF }, { 0x008007, 0x008008 }, "16lf1787_g.lkr"     },
+  { PROC_CLASS_PIC14E   , "__16LF1786"    , { "pic16lf1786"    , "p16lf1786"      , "16lf1786"        }, 0xA786,  1,   32, 0x00F0FF, 0x000800, { 0x000800, 0x00EFFF }, { 0x008007, 0x008008 }, "16lf1786_g.lkr"     },
+  { PROC_CLASS_PIC14E   , "__16LF1787"    , { "pic16lf1787"    , "p16lf1787"      , "16lf1787"        }, 0xA787,  2,   32, 0x00F0FF, 0x001000, { 0x001000, 0x00EFFF }, { 0x008007, 0x008008 }, "16lf1787_g.lkr"     },
   { PROC_CLASS_PIC14E   , "__16LF1788"    , { "pic16lf1788"    , "p16lf1788"      , "16lf1788"        }, 0xA788,  8,   32, 0x00F0FF, 0x004000, { 0x004000, 0x00EFFF }, { 0x008007, 0x008008 }, "16lf1788_g.lkr"     },
   { PROC_CLASS_PIC14E   , "__16LF1789"    , { "pic16lf1789"    , "p16lf1789"      , "16lf1789"        }, 0xA789,  8,   32, 0x00F0FF, 0x004000, { 0x004000, 0x00EFFF }, { 0x008007, 0x008008 }, "16lf1789_g.lkr"     },
   { PROC_CLASS_PIC14E   , "__16LF1823"    , { "pic16lf1823"    , "p16lf1823"      , "16lf1823"        }, 0xA823,  1,   32, 0x00F0FF, 0x000800, { 0x000800, 0x00EFFF }, { 0x008007, 0x008008 }, "16lf1823_g.lkr"     },
